@@ -40,6 +40,7 @@
         <oap.deps.maven.checkstyle.version>3.2.0</oap.deps.maven.checkstyle.version>
         <oap.deps.checkstyle.version>10.3.3</oap.deps.checkstyle.version>
         <oap.deps.maven.source.version>3.2.1</oap.deps.maven.source.version>
+        <oap.deps.maven.surefire.version>3.0.0-M7</oap.deps.maven.surefire.version>
     </properties>
 
     <build>
@@ -139,6 +140,47 @@
                         <version>${oap.deps.checkstyle.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+
+                <configuration>
+                    <argLine>
+                        -ea
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.math=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.text=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.sql/java.sql=ALL-UNNAMED
+                    </argLine>
+                    <forkCount>1</forkCount>
+                    <!-- Activate the use of TCP to transmit events to the plugin -->
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+                    <reuseForks>true</reuseForks>
+                    <trimStackTrace>false</trimStackTrace>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <useFile>false</useFile>
+                    <disableXmlReport>true</disableXmlReport>
+                    <printSummary>false</printSummary>
+                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <runOrder>balanced</runOrder>
+                    <includes>
+                        <include>**/*Test.*</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*Performance.*</exclude>
+                        <exclude>**/*Perf.*</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
